--- a/views/admin/inicio.html
+++ b/views/admin/inicio.html
@@ -13,7 +13,13 @@
     <!-- Contenido principal del documento -->
     <main>
         <h1 class="" id="mainTitle"></h1>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12">Grafina numero ejemplo</div>
+                <div class="col-lg-4 col-md-6 col-sm-12">Grafina numero ejemplo</div>
+                <div class="col-lg-4 col-md-6 col-sm-12">Grafina numero ejemplo</div>
+            </div>
+        </div>
     </main>
 
     <!-- IMPORTACIÓN DE ARCHIVOS JAVASCRIPT -->
