optimizacion de buscador de cables con un switch case :)

--- a/views/admin/cables.html
+++ b/views/admin/cables.html
@@ -53,12 +53,12 @@
                                 ordenar registros
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" onclick="orderByName()">Alfabético</a></li>
-                                <li><a class="dropdown-item" href="#" onclick="readByLengthDesc()">Mayor
+                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 1)">Alfabético</a></li>
+                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 2)">Mayor
                                         cantidad</a></li>
-                                <li><a class="dropdown-item" href="#" onclick="readByLengthAsc()">Menor
+                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 3)">Menor
                                         cantidad</a></li>
-                                <li><a class="dropdown-item" href="#" onclick="readByLengthAsc()">Actualizado
+                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 4)">Actualizado
                                         recientemente</a></li>
                             </ul>
                         </div>
