--- a/views/admin/empleados.html
+++ b/views/admin/empleados.html
@@ -119,6 +119,8 @@
     <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
     <!-- Llamada al controlador de la página web -->
     <script src="../../controllers/admin/empleados.js"></script>
+    <!-- ? Llama al validador de textos -->
+    <script src="../../controllers/utils/inputValidator.js"></script>
     <!-- ! cambiar el link js para el controntrolador -->
 </body>
 
